
EXTRA_DIST = bookshelf.xml Makefile.example document_create.c document_new.c document_new_from_file.c document_new_from_path.c document_new_from_string.c document_new_minimal.c document_properties.c document_save_to_path.c document_save_to_stream.c node.c comment.c character_data.c text.c node_list.c element.c
