
EXTRA_DIST = bookshelf.xml bookshelf_node.xml bookshelf2.xml \
   character_data.js comment.js document_create.js document_new_from_file.js document_new_from_path.js document_new_from_string.js document_new.js document_properties.js document_save_to_path.js element.js node_child_management.js node_list.js node_self.js text.js
